--- a/views/pizza.html
+++ b/views/pizza.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>  
-  <link rel="stylesheet" async href="css/style.css">
-  <link rel="stylesheet" async href="css/bootstrap-grid.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                 <form action="#locations">
                   <input type="submit" value="Locations">
                 </form>
-                <form async action="#" onsubmit="alert('Thanks for clicking! This button doesn\'t do anything because this is a fake pizzeria :\)')">
+                <form action="#" onsubmit="alert('Thanks for clicking! This button doesn\'t do anything because this is a fake pizzeria :\)')">
                   <input type="submit" value="Contact Us">
                 </form>
               </div>
@@ -36,7 +36,7 @@
     </div>
     <div id="callToAction" class="row">
       <div class="col-md-4">
-        <img async src="images/pizzeria.png" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
+        <img src="images/pizzeria.jpg" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
       </div>
       <div class="col-md-8">
         <div class="row">
@@ -104,7 +104,7 @@
         <div id="randomPizzas" class="row">
           <div id="pizza0" class="randomPizzaContainer" style="width:33.33%;">
             <div class="col-md-6">
-              <img async src="images/pizza.png" class="img-responsive">
+              <img src="images/pizza.png" class="img-responsive">
             </div>
             <div class="col-md-6">
               <h4>The Udacity Special</h4>
@@ -121,7 +121,7 @@
           </div>
           <div id="pizza1" class="randomPizzaContainer" style="width:33.33%;">
             <div class="col-md-6">
-              <img async src="images/pizza.png" class="img-responsive">
+              <img src="images/pizza.png" class="img-responsive">
             </div>
             <div class="col-md-6">
               <h4>The Cameron Special</h4>
